# serializer version: 1
# name: test_create_key[kwargs0]
  dict({
    'byok_usage': 0.0,
    'byok_usage_daily': 0.0,
    'byok_usage_monthly': 0.0,
    'byok_usage_weekly': 0.0,
    'created_at': '2025-04-15T15:41:46Z',
    'creator_user_id': 'user_abc123',
    'disabled': True,
    'expires_at': None,
    'hash': 'abcabcabcbababcbabcabcabc',
    'include_byok_in_limit': False,
    'label': 'label',
    'limit': 1.1,
    'limit_remaining': 1.1,
    'limit_reset': None,
    'name': 'name',
    'updated_at': None,
    'usage': 0.0,
    'usage_daily': 0.0,
    'usage_monthly': 0.0,
    'usage_weekly': 0.0,
    'workspace_id': 'ws-abc123',
  })
# ---
# name: test_create_key[kwargs1]
  dict({
    'byok_usage': 0.0,
    'byok_usage_daily': 0.0,
    'byok_usage_monthly': 0.0,
    'byok_usage_weekly': 0.0,
    'created_at': '2025-04-15T15:41:46Z',
    'creator_user_id': 'user_abc123',
    'disabled': True,
    'expires_at': None,
    'hash': 'abcabcabcbababcbabcabcabc',
    'include_byok_in_limit': False,
    'label': 'label',
    'limit': 1.1,
    'limit_remaining': 1.1,
    'limit_reset': None,
    'name': 'name',
    'updated_at': None,
    'usage': 0.0,
    'usage_daily': 0.0,
    'usage_monthly': 0.0,
    'usage_weekly': 0.0,
    'workspace_id': 'ws-abc123',
  })
# ---
# name: test_data_retrieval[get_key_data]
  dict({
    'byok_usage': 0.0,
    'byok_usage_daily': 0.0,
    'byok_usage_monthly': 0.0,
    'byok_usage_weekly': 0.0,
    'creator_user_id': 'user_abc123',
    'expires_at': None,
    'include_byok_in_limit': False,
    'is_free_tier': False,
    'is_management_key': False,
    'is_provisioning_key': True,
    'label': 'sk-or-v1-97c...5bf',
    'limit': None,
    'limit_remaining': None,
    'limit_reset': None,
    'usage': 0.0,
    'usage_daily': 0.0,
    'usage_monthly': 0.0,
    'usage_weekly': 0.0,
  })
# ---
# name: test_data_retrieval[get_keys]
  list([
    dict({
      'byok_usage': 0.0,
      'byok_usage_daily': 0.0,
      'byok_usage_monthly': 0.0,
      'byok_usage_weekly': 0.0,
      'created_at': '2025-04-15T15:41:46Z',
      'creator_user_id': 'user_abc123',
      'disabled': False,
      'expires_at': None,
      'hash': 'abcabcabcbababcbabcabcabc',
      'include_byok_in_limit': False,
      'label': 'sk-or-v1-f43...190',
      'limit': None,
      'limit_remaining': None,
      'limit_reset': None,
      'name': 'Home Assistant',
      'updated_at': None,
      'usage': 0.0,
      'usage_daily': 0.0,
      'usage_monthly': 0.0,
      'usage_weekly': 0.0,
      'workspace_id': 'ws-abc123',
    }),
  ])
# ---
# name: test_data_retrieval[get_models]
  list([
    dict({
      'architecture': dict({
        'input_modalities': list([
          <Modality.TEXT: 'text'>,
          <Modality.IMAGE: 'image'>,
        ]),
        'instruct_type': None,
        'modality': 'text+image->text',
        'output_modalities': list([
          <Modality.TEXT: 'text'>,
        ]),
        'tokenizer': 'Nova',
      }),
      'canonical_slug': 'amazon/nova-premier-v1',
      'context_length': 1000000,
      'created': 1761950332,
      'default_parameters': dict({
        'frequency_penalty': None,
        'presence_penalty': None,
        'repetition_penalty': None,
        'temperature': None,
        'top_k': None,
        'top_p': None,
      }),
      'description': 'Amazon Nova Premier is the most capable of Amazon’s multimodal models for complex reasoning tasks and for use as the best teacher for distilling custom models.',
      'expiration_date': None,
      'hugging_face_id': None,
      'id': 'amazon/nova-premier-v1',
      'knowledge_cutoff': None,
      'links': dict({
        'details': '/api/v1/models/amazon/nova-premier-v1/endpoints',
      }),
      'name': 'Amazon: Nova Premier 1.0',
      'per_request_limits': None,
      'pricing': dict({
        'audio': None,
        'audio_output': None,
        'completion': '0.0000125',
        'discount': None,
        'image': None,
        'image_output': None,
        'image_token': None,
        'input_audio_cache': None,
        'input_cache_read': '0.000000625',
        'input_cache_write': None,
        'input_cache_write_1h': None,
        'internal_reasoning': None,
        'prompt': '0.0000025',
        'request': None,
        'web_search': None,
      }),
      'supported_parameters': list([
        <SupportedParameter.MAX_TOKENS: 'max_tokens'>,
        <SupportedParameter.STOP: 'stop'>,
        <SupportedParameter.TEMPERATURE: 'temperature'>,
        <SupportedParameter.TOOLS: 'tools'>,
        <SupportedParameter.TOP_K: 'top_k'>,
        <SupportedParameter.TOP_P: 'top_p'>,
      ]),
      'supported_voices': None,
      'top_provider': dict({
        'context_length': 1000000,
        'is_moderated': True,
        'max_completion_tokens': 32000,
      }),
    }),
    dict({
      'architecture': dict({
        'input_modalities': list([
          <Modality.TEXT: 'text'>,
        ]),
        'instruct_type': None,
        'modality': 'text->text',
        'output_modalities': list([
          <Modality.TEXT: 'text'>,
          <Modality.EMBEDDINGS: 'embeddings'>,
        ]),
        'tokenizer': 'Other',
      }),
      'canonical_slug': 'openai/text-embedding-3-large',
      'context_length': 8192,
      'created': 1761862866,
      'default_parameters': dict({
        'frequency_penalty': None,
        'presence_penalty': None,
        'repetition_penalty': None,
        'temperature': None,
        'top_k': None,
        'top_p': None,
      }),
      'description': "text-embedding-3-large is OpenAI's most capable embedding model for both english and non-english tasks. Embeddings are a numerical representation of text that can be used to measure the relatedness between two pieces of text. Embeddings are useful for search, clustering, recommendations, anomaly detection, and classification tasks.",
      'expiration_date': None,
      'hugging_face_id': None,
      'id': 'openai/text-embedding-3-large',
      'knowledge_cutoff': None,
      'links': None,
      'name': 'OpenAI: Text Embedding 3 Large',
      'per_request_limits': None,
      'pricing': dict({
        'audio': None,
        'audio_output': None,
        'completion': '0',
        'discount': None,
        'image': '0',
        'image_output': None,
        'image_token': None,
        'input_audio_cache': None,
        'input_cache_read': None,
        'input_cache_write': None,
        'input_cache_write_1h': None,
        'internal_reasoning': '0',
        'prompt': '0.00000013',
        'request': '0',
        'web_search': '0',
      }),
      'supported_parameters': list([
        <SupportedParameter.FREQUENCY_PENALTY: 'frequency_penalty'>,
        <SupportedParameter.LOGIT_BIAS: 'logit_bias'>,
        <SupportedParameter.LOGPROBS: 'logprobs'>,
        <SupportedParameter.MAX_TOKENS: 'max_tokens'>,
        <SupportedParameter.PRESENCE_PENALTY: 'presence_penalty'>,
        <SupportedParameter.RESPONSE_FORMAT: 'response_format'>,
        <SupportedParameter.SEED: 'seed'>,
        <SupportedParameter.STOP: 'stop'>,
        <SupportedParameter.STRUCTURED_OUTPUTS: 'structured_outputs'>,
        <SupportedParameter.TEMPERATURE: 'temperature'>,
        <SupportedParameter.TOP_LOGPROBS: 'top_logprobs'>,
        <SupportedParameter.TOP_P: 'top_p'>,
      ]),
      'supported_voices': None,
      'top_provider': dict({
        'context_length': 8192,
        'is_moderated': True,
        'max_completion_tokens': None,
      }),
    }),
    dict({
      'architecture': dict({
        'input_modalities': list([
          <Modality.TEXT: 'text'>,
          <Modality.IMAGE: 'image'>,
        ]),
        'instruct_type': None,
        'modality': 'text+image->text',
        'output_modalities': list([
          <Modality.TEXT: 'text'>,
        ]),
        'tokenizer': 'Other',
      }),
      'canonical_slug': 'perplexity/sonar-pro-search',
      'context_length': 200000,
      'created': 1761854366,
      'default_parameters': dict({
        'frequency_penalty': None,
        'presence_penalty': None,
        'repetition_penalty': None,
        'temperature': None,
        'top_k': None,
        'top_p': None,
      }),
      'description': "Exclusively available on the OpenRouter API, Sonar Pro's new Pro Search mode is Perplexity's most advanced agentic search system. It is designed for deeper reasoning and analysis. Pricing is based on tokens plus $18 per thousand requests. This model powers the Pro Search mode on the Perplexity platform.  Sonar Pro Search adds autonomous, multi-step reasoning to Sonar Pro. So, instead of just one query + synthesis, it plans and executes entire research workflows using tools.",
      'expiration_date': None,
      'hugging_face_id': None,
      'id': 'perplexity/sonar-pro-search',
      'knowledge_cutoff': None,
      'links': None,
      'name': 'Perplexity: Sonar Pro Search',
      'per_request_limits': None,
      'pricing': dict({
        'audio': None,
        'audio_output': None,
        'completion': '0.000015',
        'discount': None,
        'image': '0',
        'image_output': None,
        'image_token': None,
        'input_audio_cache': None,
        'input_cache_read': None,
        'input_cache_write': None,
        'input_cache_write_1h': None,
        'internal_reasoning': '0',
        'prompt': '0.000003',
        'request': '0.018',
        'web_search': '0',
      }),
      'supported_parameters': list([
        <SupportedParameter.FREQUENCY_PENALTY: 'frequency_penalty'>,
        <SupportedParameter.INCLUDE_REASONING: 'include_reasoning'>,
        <SupportedParameter.MAX_TOKENS: 'max_tokens'>,
        <SupportedParameter.PRESENCE_PENALTY: 'presence_penalty'>,
        <SupportedParameter.REASONING: 'reasoning'>,
        <SupportedParameter.STRUCTURED_OUTPUTS: 'structured_outputs'>,
        <SupportedParameter.TEMPERATURE: 'temperature'>,
        <SupportedParameter.TOP_K: 'top_k'>,
        <SupportedParameter.TOP_P: 'top_p'>,
        <SupportedParameter.WEB_SEARCH_OPTIONS: 'web_search_options'>,
      ]),
      'supported_voices': None,
      'top_provider': dict({
        'context_length': 200000,
        'is_moderated': False,
        'max_completion_tokens': 8000,
      }),
    }),
    dict({
      'architecture': dict({
        'input_modalities': list([
          <Modality.TEXT: 'text'>,
          <Modality.AUDIO: 'audio'>,
        ]),
        'instruct_type': None,
        'modality': 'text->text',
        'output_modalities': list([
          <Modality.TEXT: 'text'>,
        ]),
        'tokenizer': 'Mistral',
      }),
      'canonical_slug': 'mistralai/voxtral-small-24b-2507',
      'context_length': 32000,
      'created': 1761835144,
      'default_parameters': dict({
        'frequency_penalty': None,
        'presence_penalty': None,
        'repetition_penalty': None,
        'temperature': 0.2,
        'top_k': None,
        'top_p': 0.95,
      }),
      'description': 'Voxtral Small is an enhancement of Mistral Small 3, incorporating state-of-the-art audio input capabilities while retaining best-in-class text performance. It excels at speech transcription, translation and audio understanding. Input audio is priced at $100 per million seconds.',
      'expiration_date': None,
      'hugging_face_id': 'mistralai/Voxtral-Small-24B-2507',
      'id': 'mistralai/voxtral-small-24b-2507',
      'knowledge_cutoff': None,
      'links': None,
      'name': 'Mistral: Voxtral Small 24B 2507',
      'per_request_limits': None,
      'pricing': dict({
        'audio': '0.0001',
        'audio_output': None,
        'completion': '0.0000003',
        'discount': None,
        'image': '0',
        'image_output': None,
        'image_token': None,
        'input_audio_cache': None,
        'input_cache_read': None,
        'input_cache_write': None,
        'input_cache_write_1h': None,
        'internal_reasoning': '0',
        'prompt': '0.0000001',
        'request': '0',
        'web_search': '0',
      }),
      'supported_parameters': list([
        <SupportedParameter.FREQUENCY_PENALTY: 'frequency_penalty'>,
        <SupportedParameter.MAX_TOKENS: 'max_tokens'>,
        <SupportedParameter.PRESENCE_PENALTY: 'presence_penalty'>,
        <SupportedParameter.RESPONSE_FORMAT: 'response_format'>,
        <SupportedParameter.SEED: 'seed'>,
        <SupportedParameter.STOP: 'stop'>,
        <SupportedParameter.STRUCTURED_OUTPUTS: 'structured_outputs'>,
        <SupportedParameter.TEMPERATURE: 'temperature'>,
        <SupportedParameter.TOOL_CHOICE: 'tool_choice'>,
        <SupportedParameter.TOOLS: 'tools'>,
        <SupportedParameter.TOP_P: 'top_p'>,
      ]),
      'supported_voices': None,
      'top_provider': dict({
        'context_length': 32000,
        'is_moderated': False,
        'max_completion_tokens': None,
      }),
    }),
    dict({
      'architecture': dict({
        'input_modalities': list([
          <Modality.TEXT: 'text'>,
        ]),
        'instruct_type': None,
        'modality': 'text->text',
        'output_modalities': list([
          <Modality.TEXT: 'text'>,
        ]),
        'tokenizer': 'GPT',
      }),
      'canonical_slug': 'openai/gpt-oss-safeguard-20b',
      'context_length': 131072,
      'created': 1761752836,
      'default_parameters': dict({
        'frequency_penalty': None,
        'presence_penalty': None,
        'repetition_penalty': None,
        'temperature': None,
        'top_k': None,
        'top_p': None,
      }),
      'description': "gpt-oss-safeguard-20b is a safety reasoning model from OpenAI built upon gpt-oss-20b. This open-weight, 21B-parameter Mixture-of-Experts (MoE) model offers lower latency for safety tasks like content classification, LLM filtering, and trust & safety labeling.  Learn more about this model in OpenAI's gpt-oss-safeguard [user guide](https://cookbook.openai.com/articles/gpt-oss-safeguard-guide).",
      'expiration_date': None,
      'hugging_face_id': 'openai/gpt-oss-safeguard-20b',
      'id': 'openai/gpt-oss-safeguard-20b',
      'knowledge_cutoff': None,
      'links': None,
      'name': 'OpenAI: gpt-oss-safeguard-20b',
      'per_request_limits': None,
      'pricing': dict({
        'audio': None,
        'audio_output': None,
        'completion': '0.0000003',
        'discount': None,
        'image': '0',
        'image_output': None,
        'image_token': None,
        'input_audio_cache': None,
        'input_cache_read': '0.000000037',
        'input_cache_write': None,
        'input_cache_write_1h': None,
        'internal_reasoning': '0',
        'prompt': '0.000000075',
        'request': '0',
        'web_search': '0',
      }),
      'supported_parameters': list([
        <SupportedParameter.INCLUDE_REASONING: 'include_reasoning'>,
        <SupportedParameter.MAX_TOKENS: 'max_tokens'>,
        <SupportedParameter.REASONING: 'reasoning'>,
        <SupportedParameter.RESPONSE_FORMAT: 'response_format'>,
        <SupportedParameter.SEED: 'seed'>,
        <SupportedParameter.STOP: 'stop'>,
        <SupportedParameter.TEMPERATURE: 'temperature'>,
        <SupportedParameter.TOOL_CHOICE: 'tool_choice'>,
        <SupportedParameter.TOOLS: 'tools'>,
        <SupportedParameter.TOP_P: 'top_p'>,
      ]),
      'supported_voices': None,
      'top_provider': dict({
        'context_length': 131072,
        'is_moderated': False,
        'max_completion_tokens': 65536,
      }),
    }),
  ])
# ---
# name: test_get_key
  dict({
    'byok_usage': 0.0,
    'byok_usage_daily': 0.0,
    'byok_usage_monthly': 0.0,
    'byok_usage_weekly': 0.0,
    'created_at': '2025-04-15T15:41:46Z',
    'creator_user_id': 'user_abc123',
    'disabled': False,
    'expires_at': None,
    'hash': 'abcabcabcbababcbabcabcabc',
    'include_byok_in_limit': False,
    'label': 'sk-or-v1-f43...190',
    'limit': 5.0,
    'limit_remaining': 4.0,
    'limit_reset': None,
    'name': 'Home Assistant',
    'updated_at': '2025-04-15T18:33:52Z',
    'usage': 1.0,
    'usage_daily': 0.0,
    'usage_monthly': 0.0,
    'usage_weekly': 0.0,
    'workspace_id': 'ws-abc123',
  })
# ---
# name: test_get_model
  dict({
    'architecture': dict({
      'input_modalities': list([
        <Modality.TEXT: 'text'>,
        <Modality.IMAGE: 'image'>,
      ]),
      'instruct_type': None,
      'modality': 'text+image->text',
      'output_modalities': list([
        <Modality.TEXT: 'text'>,
      ]),
      'tokenizer': 'Nova',
    }),
    'canonical_slug': 'amazon/nova-premier-v1',
    'context_length': 1000000,
    'created': 1761950332,
    'default_parameters': dict({
      'frequency_penalty': None,
      'presence_penalty': None,
      'repetition_penalty': None,
      'temperature': None,
      'top_k': None,
      'top_p': None,
    }),
    'description': "Amazon Nova Premier is the most capable of Amazon's multimodal models for complex reasoning tasks and for use as the best teacher for distilling custom models.",
    'expiration_date': None,
    'hugging_face_id': None,
    'id': 'amazon/nova-premier-v1',
    'knowledge_cutoff': None,
    'links': dict({
      'details': '/api/v1/models/amazon/nova-premier-v1/endpoints',
    }),
    'name': 'Amazon: Nova Premier 1.0',
    'per_request_limits': None,
    'pricing': dict({
      'audio': None,
      'audio_output': None,
      'completion': '0.0000125',
      'discount': None,
      'image': None,
      'image_output': None,
      'image_token': None,
      'input_audio_cache': None,
      'input_cache_read': '0.000000625',
      'input_cache_write': None,
      'input_cache_write_1h': None,
      'internal_reasoning': None,
      'prompt': '0.0000025',
      'request': None,
      'web_search': None,
    }),
    'supported_parameters': list([
      <SupportedParameter.MAX_TOKENS: 'max_tokens'>,
      <SupportedParameter.STOP: 'stop'>,
      <SupportedParameter.TEMPERATURE: 'temperature'>,
      <SupportedParameter.TOOLS: 'tools'>,
      <SupportedParameter.TOP_K: 'top_k'>,
      <SupportedParameter.TOP_P: 'top_p'>,
    ]),
    'supported_voices': None,
    'top_provider': dict({
      'context_length': 1000000,
      'is_moderated': True,
      'max_completion_tokens': 32000,
    }),
  })
# ---
# name: test_update_key
  dict({
    'byok_usage': 0.0,
    'byok_usage_daily': 0.0,
    'byok_usage_monthly': 0.0,
    'byok_usage_weekly': 0.0,
    'created_at': '2025-04-15T15:41:46Z',
    'creator_user_id': 'user_abc123',
    'disabled': False,
    'expires_at': None,
    'hash': 'abcabcabcbababcbabcabcabc',
    'include_byok_in_limit': False,
    'label': 'sk-or-v1-f43...190',
    'limit': 5.0,
    'limit_remaining': 4.0,
    'limit_reset': None,
    'name': 'Home Assistant',
    'updated_at': '2025-04-15T18:33:52Z',
    'usage': 1.0,
    'usage_daily': 0.0,
    'usage_monthly': 0.0,
    'usage_weekly': 0.0,
    'workspace_id': 'ws-abc123',
  })
# ---
